--- a/AngularRecipe/AngularRecipe/HtmlPage1.html
+++ b/AngularRecipe/AngularRecipe/HtmlPage1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>Recipe Box</title>
+    <title>Recipe Box an Angular Project</title>
 </head>
 <body>
 
