--- a/AngularRecipe/AngularRecipe/HtmlPage1.html
+++ b/AngularRecipe/AngularRecipe/HtmlPage1.html
@@ -1,10 +1,13 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en-US">
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 <head>
     <meta charset="utf-8" />
     <title>Recipe Box an Angular Project</title>
 </head>
 <body>
+
+
 
 </body>
 </html>
