--- a/AngularRecipe/AngularRecipe/HtmlPage1.html
+++ b/AngularRecipe/AngularRecipe/HtmlPage1.html
@@ -8,6 +8,9 @@
 <body>
 
 
-
+    <div ng-app="">
+        <p>Name : <input type="text" ng-model="name"></p>
+        <h1>Hello {{name}}</h1>
+    </div>
 </body>
 </html>
