--- a/AngularRecipe/AngularRecipe/HtmlPage1.html
+++ b/AngularRecipe/AngularRecipe/HtmlPage1.html
@@ -13,6 +13,7 @@
     <div ng-app="">
         <p>Name : <input type="text" ng-model="name"></p>
         <h1>Hello {{name}}</h1>
+        <h2> Which recipe are you looking for: <input type="text" ng-model="name"></h2>
     </div>
 </body>
 </html>
