added remove to list in angular

--- a/AngularRecipe/AngularRecipe/HtmlPage1.html
+++ b/AngularRecipe/AngularRecipe/HtmlPage1.html
@@ -8,6 +8,9 @@
         $scope.addItem = function () {
             $scope.products.push($scope.addMe);
         }
+        $scope.removeItem = function (x) {
+            $scope.products.splice(x, 1);
+        }
     });
 </script>
 <head>
